--- a/package.json
+++ b/package.json
@@ -26,6 +26,6 @@
     "types": "./lib/index.d.ts",
     "main": "./lib/index.js",
     "lint-staged": {
-        "*.{js,ts,json}": "prettier --write"
+        "*.{js,ts,json,md}": "prettier --write"
     }
 }
