--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
         "clean": "del-cli ./lib",
         "build": "npm run clean && tsc -p ./tsconfig.json",
         "prepack": "npm run build",
-        "test": "node --experimental-strip-types --test",
+        "test": "jest",
         "prepare": "husky"
     },
     "devDependencies": {
+        "@jest/globals": "^29.7.0",
+        "@types/adm-zip": "^0.5.7",
         "@types/node": "^22.14.1",
         "del-cli": "^6.0.0",
         "husky": "^9.1.7",
+        "jest": "^29.7.0",
         "lint-staged": "^15.5.1",
         "prettier": "^3.5.3",
+        "ts-jest": "^29.3.2",
         "typescript": "^5.8.3"
     },
     "files": [
@@ -27,5 +31,8 @@
     "main": "./lib/index.js",
     "lint-staged": {
         "*.{js,ts,json,md}": "prettier --write"
+    },
+    "dependencies": {
+        "adm-zip": "^0.5.16"
     }
 }
